# cqt-web

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  build.sh  package.json
src/: bindings.cpp  cqt.cpp  cqt.hpp  fft.cpp  fft.hpp  progress.hpp  resample.hpp
src/core/: fft.cpp  fft.hpp  resample.cpp  resample.hpp
src/cqt/: cqt_base.hpp  hybrid_cqt.cpp  hybrid_cqt.hpp  pseudo_cqt.cpp  pseudo_cqt.hpp  standard_cqt.cpp  standard_cqt.hpp  vqt.cpp  vqt.hpp
src/utils/: convert.cpp  convert.hpp
test/: compare_fft_methods.py  compare_librosa.py  debug_cpp_logic.py  debug_cpp_vs_librosa.py  debug_librosa.py  debug_librosa_internals.py  debug_normalization.py  debug_octave4.py  debug_octaves.py  debug_single_bin.py  debug_stft_difference.py  find_correct_norm.py  match_librosa.py  simple_cqt.py  test_cqt.cpp  test_wasm.mjs  trace_hybrid_cqt.py  trace_librosa.py  trace_librosa_exact.py  trace_librosa_source.py  verify_normalization.py
types/: index.d.ts
